test/corpus/functions.txt
====
function declaration without trailing dot
====
function addThem {
    return getParameter(1) + getParameter(2).
}
---

(program
  (declaration
    (function_clause
      (function)
      (identifier)
      (instruction_block
        (return_statement
          (return)
          (or_expression
            (and_expression
              (comparison_expression
                (addition_expression
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier)
                            (arglist
                              (or_expression
                                (and_expression
                                  (comparison_expression
                                    (addition_expression
                                      (multiplication_expression
                                        (unary_expression
                                          (power_expression
                                            (suffix_expression
                                              (suffixterm
                                                (number))))))))))))))))
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier)
                            (arglist
                              (or_expression
                                (and_expression
                                  (comparison_expression
                                    (addition_expression
                                      (multiplication_expression
                                        (unary_expression
                                          (power_expression
                                            (suffix_expression
                                              (suffixterm
                                                (number))))))))))))))))))))
          (terminator))))))

====
function declaration with trailing dot
====
function addThem {
    return getParameter(1) + getParameter(2).
}.
---

(program
  (declaration
    (function_clause
      (function)
      (identifier)
      (instruction_block
        (return_statement
          (return)
          (or_expression
            (and_expression
              (comparison_expression
                (addition_expression
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier)
                            (arglist
                              (or_expression
                                (and_expression
                                  (comparison_expression
                                    (addition_expression
                                      (multiplication_expression
                                        (unary_expression
                                          (power_expression
                                            (suffix_expression
                                              (suffixterm
                                                (number))))))))))))))))
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier)
                            (arglist
                              (or_expression
                                (and_expression
                                  (comparison_expression
                                    (addition_expression
                                      (multiplication_expression
                                        (unary_expression
                                          (power_expression
                                            (suffix_expression
                                              (suffixterm
                                                (number))))))))))))))))))))
          (terminator)))
      (terminator))))

====
bare function declaration
====
function f {
    print x.
}
set y to f.
---

(program
  (declaration
    (function_clause
      (function)
      (identifier)
      (instruction_block
        (print_statement
          (print)
          (or_expression
            (and_expression
              (comparison_expression
                (addition_expression
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier))))))))))
          (terminator)))))
  (set_statement
    (set)
    (suffix_expression
      (suffixterm
        (identifier)))
    (to)
    (or_expression
      (and_expression
        (comparison_expression
          (addition_expression
            (multiplication_expression
              (unary_expression
                (power_expression
                  (suffix_expression
                    (suffixterm
                      (identifier))))))))))
    (terminator)))

====
function followed by standalone dot
====
function f {
    print x.
}
.
print y.
---

(program
  (declaration
    (function_clause
      (function)
      (identifier)
      (instruction_block
        (print_statement
          (print)
          (or_expression
            (and_expression
              (comparison_expression
                (addition_expression
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (identifier))))))))))
          (terminator)))
      (terminator)))
  (print_statement
    (print)
    (or_expression
      (and_expression
        (comparison_expression
          (addition_expression
            (multiplication_expression
              (unary_expression
                (power_expression
                  (suffix_expression
                    (suffixterm
                      (identifier))))))))))
    (terminator)))

====
function with comments inside
====
function f {
    // add stuff
    return 1.
}
---

(program
  (declaration
    (function_clause
      (function)
      (identifier)
      (instruction_block
        (comment)
        (return_statement
          (return)
          (or_expression
            (and_expression
              (comparison_expression
                (addition_expression
                  (multiplication_expression
                    (unary_expression
                      (power_expression
                        (suffix_expression
                          (suffixterm
                            (number))))))))))
          (terminator))))))
